# shadowmidi

./: CMakeLists.txt  README.md  main.cpp
include/: format.hpp
include/format-commons/audio/: midi.hpp  x-midi.hpp
